fix whitespace + nav link styling

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,4 +1,4 @@
-a {
+#about-content a {
     color: #666666;
     text-decoration: none;
 }
@@ -14,5 +14,3 @@ a {
     justify-content: space-between;
     font-size: 36px;
 }
-
-
